--- a/pom.xml
+++ b/pom.xml
@@ -4,54 +4,32 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>angrybeaver</groupId>
+    <groupId>com.angrybeaver.karaf</groupId>
     <artifactId>karaf</artifactId>
     <version>1.0-SNAPSHOT</version>
-    <packaging>karaf-assembly</packaging>
+    <packaging>pom</packaging>
 
-    <dependencies>
-        <dependency>
-            <groupId>org.apache.karaf.tooling</groupId>
-            <artifactId>karaf-maven-plugin</artifactId>
-            <version>4.2.0</version>
-        </dependency>
-        <dependency>
-            <!-- scope is compile so all features (there is only one) are installed into startup.properties and the feature repo itself is not added in etc/org.apache.karaf.features.cfg file -->
-            <groupId>org.apache.karaf.features</groupId>
-            <artifactId>framework</artifactId>
-            <version>4.2.0</version>
-            <type>kar</type>
-        </dependency>
-        <dependency>
-            <!-- scope is runtime so the feature repo is listed in etc/org.apache.karaf.features.cfg file, and features will installed into the system directory -->
-            <groupId>org.apache.karaf.features</groupId>
-            <artifactId>standard</artifactId>
-            <version>4.2.0</version>
-            <classifier>features</classifier>
-            <type>xml</type>
-            <scope>runtime</scope>
-        </dependency>
-    </dependencies>
+    <modules>
+        <module>assembly</module>
+        <module>dependency-features</module>
+        <module>project-features</module>
+    </modules>
 
 
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.apache.karaf.tooling</groupId>
-                <artifactId>karaf-maven-plugin</artifactId>
-                <version>4.2.0</version>
-                <extensions>true</extensions>
-                <configuration>
-                    <bootFeatures>
-                        <feature>standard</feature>
-                    </bootFeatures>
-                    <installedFeatures>
-                        <feature>wrapper</feature>
-                        <feature>spring/4.0.7.RELEASE_1</feature>
-                    </installedFeatures>
-            </configuration>
-            </plugin>
-        </plugins>
-    </build>
+    <properties>
+        <karaf.version>4.2.1</karaf.version>
+    </properties>
+
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>com.angrybeaver.karaf</groupId>
+                <artifactId>project-features</artifactId>
+                <version>${project.version}</version>
+                <type>xml</type>
+                <scope>runtime</scope>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
 
 </project>
