--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,7 @@
                 <groupId>com.angrybeaver.karaf</groupId>
                 <artifactId>project-features</artifactId>
                 <version>${project.version}</version>
+                <classifier>features</classifier>
                 <type>xml</type>
                 <scope>runtime</scope>
             </dependency>
